[FIX] Fix Direct messages getting squished on Chrome (#697)

--- a/pandora-client-web/src/components/directMessage/directMessage.scss
+++ b/pandora-client-web/src/components/directMessage/directMessage.scss
@@ -7,11 +7,9 @@
 	background-color: $grey-darker;
 
 	.direct-message-list {
-		display: flex;
-		flex-flow: column;
+		position: relative;
 		flex: 1;
-		overflow-x: hidden;
-		overflow-y: scroll;
+		overflow: hidden;
 		user-select: text;
 	}
 
